include_directories("../")
macro(new_module n)
	add_library(${n} SHARED "${n}.c")
	set_target_properties(${n} PROPERTIES PREFIX "")
endmacro()

new_module("test00")
new_module("test01")
new_module("test02")
new_module("test03")
new_module("test04")
new_module("test05")

add_library(tc1 SHARED test_client1.c client_behaviour.c)
set_target_properties(tc1 PROPERTIES PREFIX "")
